--- a/Modulo_02_03_04_05_Codigo/index.html
+++ b/Modulo_02_03_04_05_Codigo/index.html
@@ -15,7 +15,7 @@
 <body>
 	<header class="header">
 		<aside class="header_sidebar">
-			<img src="assets/images/Logo.svg" width="70px" alt="Logo de Barberia">
+			<img src="assets/images/logo.svg" width="70px" alt="Logo de Barberia">
 
 			<section class="social">
 
@@ -52,9 +52,9 @@
 			</article>
 
 			<section class="slider">
-				<img src="assets/images/Slider_img_1.jpg" alt="Barbero cortando cabello">
-				<img src="assets/images/Slider_img_2.jpg" alt="Cuchilla de afeita">
-				<img src="assets/images/Slider_img_3.jpg" alt="Barbero cortando barba">
+				<img src="assets/images/slider_img_1.jpg" alt="Barbero cortando cabello">
+				<img src="assets/images/slider_img_2.jpg" alt="Cuchilla de afeita">
+				<img src="assets/images/slider_img_3.jpg" alt="Barbero cortando barba">
 			</section>
 
 			<div class="overlay"></div>
