--- a/Modulo_02_03_04_05_Codigo/index.html
+++ b/Modulo_02_03_04_05_Codigo/index.html
@@ -15,7 +15,7 @@
 <body>
 	<header class="header">
 		<aside class="header_sidebar">
-			<img src="assets/images/logo.svg" width="70px" alt="Logo de Barberia">
+			<img src="assets/images/Logo.svg" width="70px" alt="Logo de Barberia">
 
 			<section class="social">
 
@@ -52,9 +52,9 @@
 			</article>
 
 			<section class="slider">
-				<img src="assets/images/slider_img_1.jpg" alt="Barbero cortando cabello">
-				<img src="assets/images/slider_img_2.jpg" alt="Cuchilla de afeita">
-				<img src="assets/images/slider_img_3.jpg" alt="Barbero cortando barba">
+				<img src="assets/images/Slider_img_1.jpg" alt="Barbero cortando cabello">
+				<img src="assets/images/Slider_img_2.jpg" alt="Cuchilla de afeita">
+				<img src="assets/images/Slider_img_3.jpg" alt="Barbero cortando barba">
 			</section>
 
 			<div class="overlay"></div>
@@ -302,9 +302,6 @@
 				<img src="assets/images/galery_img_4.jpg" alt="Barbero cortando cabello">
 			</section>
 		</section>
-	</main>
-
-	<footer>
 		<!-- seccion de contacto  -->
 		<section class="contact">
 			<!-- Formulario  -->
@@ -337,8 +334,14 @@
 
 				<p class="label"><span class="rectangle"></span>horario</p>
 				<h4>Todos los días de 9:00 a 22:00</h4>
+
+				<div class="overlay"></div>
 			</article>
 		</section>
+	</main>
+
+	<footer>
+		
 		<!-- Barra de redes sociales  -->
 		<aside class="social-bar">
 			<p class="copy">Copyright 2020</p>
