--- a/Modulo 07/index.html
+++ b/Modulo 07/index.html
@@ -13,19 +13,19 @@
 </head>
 
 <body>
-	<header class="page-header">
+	<header class="header">
+		<aside class="header_sidebar">
+			<img src="assets/images/logo.svg" width="70px" alt="Logo de Barberia">
 
-		<aside class="social-sidebar">
-			<img class="social-sidebar__logo" src="assets/images/logo.svg" alt="Logo de Barberia">
+			<section class="social">
 
-			<section class="social-sidebar__section">
-				<a class="social-sidebar__link" href="#" target="_blank" rel="Red Social">Instagram</a>
-				<a class="social-sidebar__link" href="#" target="_blank" rel="Red Social">Youtube</a>
+				<a href="#" target="_blank" rel="Red Social">Instagram</a>
+				<a href="#" target="_blank" rel="Red Social">Youtube</a>
 				<span class="rectangle"></span>
 			</section>
 		</aside>
 
-		<section class="hero-section">
+		<section class="header_content">
 
 			<!-- Barra de navegacion -->
 			<nav class="navbar">
@@ -309,7 +309,7 @@
 				<h2 class="section-title">Reserva en línea</h2>
 				<input id="name" name="name" placeholder="Nombre*" required type="text">
 				<input id="phone" name="phone" placeholder="Telefono*" required type="text">
-
+				
 				<textarea name="message" id="message" cols="30" rows="10" placeholder="Mensaje"></textarea>
 				<button class="btn-dark">Enviar</button>
 			</form>
@@ -341,7 +341,7 @@
 	</main>
 
 	<footer>
-
+		
 		<!-- Barra de redes sociales  -->
 		<aside class="social-bar">
 			<p class="copy">Copyright 2020</p>
