Refactor Sass y BEM

--- a/Modulo_02_03_04_05_Codigo/index.html
+++ b/Modulo_02_03_04_05_Codigo/index.html
@@ -14,22 +14,22 @@
 
 <body>
 	<header class="page-header">
+		<aside class="header_sidebar">
+			<img src="assets/images/logo.svg" width="70px" alt="Logo de Barberia">
 
-		<aside class="social-sidebar">
-			<img class="social-sidebar__logo" src="assets/images/logo.svg" alt="Logo de Barberia">
+			<section class="social">
 
-			<section class="social-sidebar__section">
-				<a class="social-sidebar__link" href="#" target="_blank" rel="Red Social">Instagram</a>
-				<a class="social-sidebar__link" href="#" target="_blank" rel="Red Social">Youtube</a>
+				<a href="#" target="_blank" rel="Red Social">Instagram</a>
+				<a href="#" target="_blank" rel="Red Social">Youtube</a>
 				<span class="rectangle"></span>
 			</section>
 		</aside>
 
-		<section class="hero-section">
+		<section class="header_content">
 
 			<!-- Barra de navegacion -->
 			<nav class="navbar">
-				<ul class="navbar_menu">
+				<ul class="navbar_menu"> 
 					<li><a href="#about">nosotros</a></li>
 					<li><a href="#services">servicios y precios</a></li>
 					<li><a href="#barbers">barberos</a></li>
