--- a/Modulo_07/index.html
+++ b/Modulo_07/index.html
@@ -9,52 +9,53 @@
 	<script src="https://kit.fontawesome.com/f29c32cbe4.js" crossorigin="anonymous"></script>
 	<!-- Styles  -->
 	<link rel="stylesheet" href="assets/css/index.css">
+	<link rel="stylesheet" href="assets/css/styles.min.css">
 	<title>GoIt Project</title>
 </head>
 
 <body>
-	<header class="header">
-		<aside class="header_sidebar">
-			<img src="assets/images/logo.svg" width="70px" alt="Logo de Barberia">
+	<header class="page-header">
 
-			<section class="social">
+		<aside class="social-sidebar">
+			<img class="social-sidebar__logo" src="assets/images/logo.svg" alt="Logo de Barberia">
 
-				<a href="#" target="_blank" rel="Red Social">Instagram</a>
-				<a href="#" target="_blank" rel="Red Social">Youtube</a>
+			<section class="social-sidebar__section">
+				<a class="social-sidebar__link" href="#" target="_blank" rel="Red Social">Instagram</a>
+				<a class="social-sidebar__link" href="#" target="_blank" rel="Red Social">Youtube</a>
 				<span class="rectangle"></span>
 			</section>
 		</aside>
 
-		<section class="header_content">
+		<section class="hero-section">
 
 			<!-- Barra de navegacion -->
 			<nav class="navbar">
-				<ul class="navbar_menu">
-					<li><a href="#about">nosotros</a></li>
-					<li><a href="#services">servicios y precios</a></li>
-					<li><a href="#barbers">barberos</a></li>
-					<li><a href="#contact">contacto</a></li>
+				<ul class="navbar__menu">
+					<li class="navbar__item"><a class="navbar__link" href="#about">nosotros</a></li>
+					<li class="navbar__item"><a class="navbar__link" href="#barbers">barberos</a></li>
+					<li class="navbar__item"><a class="navbar__link" href="#services">servicios y precios</a></li>
+					<li class="navbar__item"><a class="navbar__link" href="#contact">contacto</a></li>
 				</ul>
 
-				<section class="navbar_booking">
-					<a href="#">+38 044 111 11 11</a>
-					<button class="btn-dark">reserva en linea</button>
+				<section class="navbar__booking">
+					<a class="navbar__link" href="#">+38 044 111 11 11</a> 
+					<button class="main-button main-button-light">reserva en linea</button>
 				</section>
 			</nav>
 			<!-- Texto del banner  -->
-			<article class="banner-text">
-				<p class="label"><span class="rectangle"></span>barberia para hombres en kiev</p>
-				<h1>barberShop</h1>
-				<p class="info">
+			<article class="article-text">
+				<p class="article__label  article__label-hero"><span class="rectangle"></span>barberia para hombres en kiev</p>
+				<h1 class="article__title article__title-hero">barberShop</h1>
+				<p class="article__info   article__info-hero">
 					Somos expertos en cortes de pelo de moda para hombres. trabajamos con rapidez, cuidado y
 					elegancia
 				</p>
 			</article>
 
-			<section class="slider">
-				<img src="assets/images/slider_img_2.jpg" alt="Cuchilla de afeita">
-				<img src="assets/images/slider_img_1.jpg" alt="Barbero cortando cabello">
-				<img src="assets/images/slider_img_3.jpg" alt="Barbero cortando barba">
+			<section class="slider">  
+				<img class="slider__img " src="assets/images/slider_img_3.jpg" alt="Barbero cortando barba">
+				<img class="slider__img " src="assets/images/slider_img_2.jpg" alt="Cuchilla de afeita">
+				<img class="slider__img " src="assets/images/slider_img_1.jpg" alt="Barbero cortando cabello">
 			</section>
 
 			<div class="overlay"></div>
@@ -309,7 +310,7 @@
 				<h2 class="section-title">Reserva en línea</h2>
 				<input id="name" name="name" placeholder="Nombre*" required type="text">
 				<input id="phone" name="phone" placeholder="Telefono*" required type="text">
-				
+
 				<textarea name="message" id="message" cols="30" rows="10" placeholder="Mensaje"></textarea>
 				<button class="btn-dark">Enviar</button>
 			</form>
@@ -341,7 +342,7 @@
 	</main>
 
 	<footer>
-		
+
 		<!-- Barra de redes sociales  -->
 		<aside class="social-bar">
 			<p class="copy">Copyright 2020</p>
