--- a/Modulo_07/index.html
+++ b/Modulo_07/index.html
@@ -38,8 +38,8 @@
 				</ul>
 
 				<section class="navbar__booking">
-					<a class="navbar__link" href="#">+38 044 111 11 11</a> 
-					<button class="main-button main-button-light">reserva en linea</button>
+					<a class="navbar__link" href="#">+38 044 111 11 11</a>
+					<button class="main-button main-button-dark">reserva en linea</button>
 				</section>
 			</nav>
 			<!-- Texto del banner  -->
@@ -52,7 +52,7 @@
 				</p>
 			</article>
 
-			<section class="slider">  
+			<section class="slider">
 				<img class="slider__img " src="assets/images/slider_img_3.jpg" alt="Barbero cortando barba">
 				<img class="slider__img " src="assets/images/slider_img_2.jpg" alt="Cuchilla de afeita">
 				<img class="slider__img " src="assets/images/slider_img_1.jpg" alt="Barbero cortando cabello">
@@ -64,29 +64,30 @@
 
 	<main>
 		<!-- Seccion Nosotros -->
-		<section class="about" id="about">
-			<aside class="about_photos">
-				<img src="assets/images/about_img_1.jpg" alt="Cortando barba">
-				<img src="assets/images/about_img_2.jpg" alt="Cortando cabello">
+		<section class="section-about" id="about">
+			<aside class="section-about__photos">
+				<img class="section-about__img" src="assets/images/about_img_2.jpg" alt="Cortando cabello">
+				<img class="section-about__img" src="assets/images/about_img_1.jpg" alt="Cortando barba">
 			</aside>
 
-			<article class="about_content">
-				<p class="label"><span class="rectangle"></span> Nosotros</p>
+			<article class="article-text">
 
-				<h2 class="section-title">La mejor barberia en tu ciudad</h2>
+				<p class="article__label article__label-light"><span class="rectangle"></span>Nosotros</p>
 
-				<p class="call-to-action">
+				<h2 class="article__title article__title-light">La mejor barberia en tu ciudad</h2>
+
+				<p class="article__call article__call-light">
 					Si quieres aumentar la confianza en tu look, sin duda estás en el lugar indicado.
 				</p>
 
-				<p class="description">
+				<p class="article__info article__info-light">
 					Somos un equipo que nunca se conforma con el mínimo y tiene hambre de cambios. Y una vez que estás en las
 					manos de nuestros artistas expertos, nunca volverás a ser el mismo. Somos un equipo que siempre está "en la
 					misma frecuencia" con nuestros clientes. Por eso ¡siempre estamos preparados para perfeccionar a todos los que
 					acuden a nosotros!.
 				</p>
 
-				<button class="btn-light">reserva en linea</button>
+				<button class="main-button main-button-light">reserva en linea</button>
 			</article>
 		</section>
 		<!-- seccion precios y servicios  -->
