SASS-BEM Jumbotron

--- a/Modulo_07/index.html
+++ b/Modulo_07/index.html
@@ -148,10 +148,10 @@
       </section>
       <!-- seccion precios y servicios  -->
       <section class="section-services" id="services">
-
         <article class="article-text">
           <p class="article__label article__label-dark">
-            <span class="rectangle"></span>Disfruta de la compañía de los mejores maestros barberos
+            <span class="rectangle"></span>Disfruta de la compañía de los
+            mejores maestros barberos
           </p>
           <h2 class="article__title article__title-dark">Servicios y precio</h2>
         </article>
@@ -190,7 +190,7 @@
             <tbody>
               <tr>
                 <td>Corte con un pasante</td>
-                <td class="service-tables__underline"></td> 
+                <td class="service-tables__underline"></td>
                 <td>desde 50 UAH.</td>
               </tr>
 
@@ -219,37 +219,38 @@
         <div class="background"></div>
       </section>
       <!-- Secccion Informativa  -->
-      <section class="jumbotron">
+      <section class="section-jumbotron">
         <!-- Indicadores de resultado -->
-        <aside class="jumbotron_scores">
-          <section class="left-column">
-            <article>
-              <h2>600<sup>+</sup></h2>
-              <h4>Clientes satisfechos cada día</h4>
+        <aside class="scores">
+          <section class="scores__column">
+            <article class="scores__element">
+              <h2 class="scores__title">600<sup class="scores__sup">+</sup></h2>
+              <h4 class="scores__subtitle">Clientes satisfechos cada día</h4>
             </article>
 
-            <article>
-              <h2>20<sup>+</sup></h2>
-              <h4>De los mejores barberos de Kiev</h4>
+            <article class="scores__element">
+              <h2 class="scores__title">20<sup class="scores__sup">+</sup></h2>
+              <h4 class="scores__subtitle">De los mejores barberos de Kiev</h4>
             </article>
           </section>
           <!-- seccion informativa  -->
-          <section class="right-column">
-            <article>
-              <h2>50<sup>+</sup></h2>
-              <h4>Premios a nuestra excelencia</h4>
+          <section class="scores__column">
+            <article class="scores__element">
+              <h2 class="scores__title">50<sup class="scores__sup">+</sup></h2>
+              <h4 class="scores__subtitle">Premios a nuestra excelencia</h4>
             </article>
 
-            <article>
-              <h2>100<sup>+</sup></h2>
-              <h4>Regalos a nuestros clientes frecuentes</h4>
+            <article class="scores__element">
+              <h2 class="scores__title">100<sup class="scores__sup">+</sup></h2>
+              <h4 class="scores__subtitle">Regalos a nuestros clientes frecuentes</h4>
             </article>
           </section>
         </aside>
         <!-- Informacion del jumbotron -->
-        <article class="jumbotron_content">
-          <p class="label"><span class="rectangle">A la vieja escuela</span></p>
-          <h2 class="section-title">¿Por qué nos prefieren a nosotros?</h2>
+        <article class="article-text">
+          <p class="article__label article__label-light"><span class="rectangle"></span>A la vieja escuela</p>
+          <h2 class="article__title article__title-light">¿Por qué nos prefieren a nosotros?</h2> 
+          
           <p class="description">
             De nosotros sólo dicen cosas buenas. Pero es mejor verlo y sentirlo
             una vez, que leerlo 10 veces.
